# multicap

./: CMakeLists.txt  README.md
calib/: CMakeLists.txt
calib/include/: c2d_svd_trans_estim.hpp  stereo_trans_estim.hpp
calib/src/: c2d_svd_trans_estim.cpp  stereo_trans_estim.cpp
cmake/: utils.cmake
data/capture/: capture-list.xml
data/check/: camera_calibration_check.xml  in_VID5.xml  out_camera_data.xml  stereo_calib.xml
data/demo/: multi_camera_omnidir.xml
data/test/: test-trans.xml
scripts/: gen-imagelist.sh
test/: CMakeLists.txt  capture.cpp  color2depth.cpp  reconstruction.cpp  show_intrinsics.cpp  stereo_trans.cpp  transfer_depth.cpp
test/src/: viewer.cpp  viewer.h
